--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,20 @@ li {
     display: flex;
     justify-content: space-between;
 }
+
+.buscar {
+    background-color: white;
+    border: 1px solid gray;
+    padding: 2px;
+    border-radius: 4px;
+
+}
+
+.buscar:focus-within {
+    border: 1px solid blue;
+}
+
+.buscar > input {
+    outline: none;
+    border: 0px;
+}
