ultimos cambios de sprint 1

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ li {
 }
 
 .secondaryButton {
-    background-color: #49aa03;
+    background-color: #0b9758;
     color: white;
 }
 .secondaryButton:hover {
