imagenes de perros

--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,22 @@ li {
     outline: none;
     border: 0px;
 }
+
+.breedCardContainer {
+    display: flex;
+}
+
+.breedCard {
+    margin: 10px;
+}
+
+.contenedor-imagen {
+    width: 240px;
+    height: 350px;
+    display: flex;
+}
+
+.contenedor-imagen > img {
+    object-fit: cover;
+    width: 100%;
+}
